Implementation of q1_memory function
Used a row by row approach for efficient processing

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -5,6 +5,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -2415597339246989,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -54,27 +55,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8c984583-71cb-48ab-a496-d5556b3c9d27",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(storage_account_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "b28508db-df41-49df-87a7-50c42a91443d",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -90,28 +70,6 @@
     "        mount_point = mount_point,\n",
     "        extra_configs  = {f\"fs.azure.account.key.{storage_account_name}.blob.core.windows.net\" : dbutils.secrets.get(scope=\"kv-scope\", key=\"access-key\")}\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "2b672e14-8c95-4857-b608-97164a0eb583",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = spark.read.json(f\"{mount_point}/{file_path}\")\n",
-    "df.printSchema()"
    ]
   },
   {
@@ -162,6 +120,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -2415597339246989,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -181,6 +140,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -2415597339246989,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -226,7 +186,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "17fe4eda-d6c4-4bef-9d60-55b1c8ed88af",
+     "nuid": "5b0729d4-b544-4ec4-b02a-3dfdb624bbe2",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -234,8 +194,8 @@
    },
    "outputs": [],
    "source": [
-    "result = q1_memory(f\"{mount_point}/{file_path}\")\n",
-    "print(result)"
+    "result = q1_memory(dbfs_file_path)\n",
+    "result"
    ]
   },
   {
