Implementation of q1_time
- used Spark Data Processing to solve the challenge

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "batchId": -2415597339246989,
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "e2b95b05-aeec-4b36-ae91-c65b9f0953a8",
      "showTitle": false,
@@ -112,18 +108,15 @@
    },
    "outputs": [],
    "source": [
-    "from memory_profiler import profile"
+    "from memory_profiler import profile\n",
+    "import importlib"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "batchId": -2415597339246989,
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0e05c6a8-f02d-448a-b30d-855f7d1b1b9a",
      "showTitle": false,
@@ -139,11 +132,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "batchId": -2415597339246989,
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "21e57529-0ec0-4dca-98c0-37ed08f6f527",
      "showTitle": false,
@@ -202,10 +191,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a1ec7dca-392d-419a-ab3b-a0430396ab86",
      "showTitle": false,
@@ -218,13 +204,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cd53e887-6f94-4584-8bcd-ce5825d00f94",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# from src import q1_time\n",
+    "# importlib.reload(q1_time)\n",
+    "\n",
+    "from src.q1_time import q1_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "785d67e1-f01a-4b34-adf8-039acfb91a1b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result = q1_time(spark, f\"{mount_point}/{file_path}\")\n",
+    "result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b68c35d8-2ec2-4dc3-9260-8aa443dbf302",
      "showTitle": false,
@@ -240,10 +263,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "968fcadf-e7ba-4174-b72e-3f14de2ff40f",
      "showTitle": false,
@@ -259,10 +279,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "3ac0b69f-3cd2-4651-a09b-0dc9838d9b2b",
      "showTitle": false,
@@ -278,10 +295,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "4ec7a3e3-908b-4a86-8b99-5faa434949ac",
      "showTitle": false,
