Implementation of q2-memory and q1 adjustments
- implemented q2_memory by reading row by row
- adjusted q1_memory to same sorting as in q1_time
- changed q1_time from PySpark data frame to Polars data frame with major time imrpovements

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e2b95b05-aeec-4b36-ae91-c65b9f0953a8",
      "showTitle": false,
@@ -86,8 +89,8 @@
    },
    "outputs": [],
    "source": [
-    "# Install both libraries with minimal output\n",
-    "%pip install -q memory_profiler py-spy"
+    "# Install all relevant libraries with minimal output\n",
+    "%pip install -q memory_profiler py-spy emoji polars"
    ]
   },
   {
@@ -116,7 +119,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0e05c6a8-f02d-448a-b30d-855f7d1b1b9a",
      "showTitle": false,
@@ -132,7 +138,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "21e57529-0ec0-4dca-98c0-37ed08f6f527",
      "showTitle": false,
@@ -191,7 +200,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a1ec7dca-392d-419a-ab3b-a0430396ab86",
      "showTitle": false,
@@ -208,7 +220,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "cd53e887-6f94-4584-8bcd-ce5825d00f94",
      "showTitle": false,
@@ -218,9 +233,6 @@
    },
    "outputs": [],
    "source": [
-    "# from src import q1_time\n",
-    "# importlib.reload(q1_time)\n",
-    "\n",
     "from src.q1_time import q1_time"
    ]
   },
@@ -229,9 +241,12 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "785d67e1-f01a-4b34-adf8-039acfb91a1b",
+     "nuid": "718b029c-4005-47c5-b34e-023777615caa",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -239,7 +254,7 @@
    },
    "outputs": [],
    "source": [
-    "result = q1_time(spark, f\"{mount_point}/{file_path}\")\n",
+    "result = q1_time(dbfs_file_path)\n",
     "result"
    ]
   },
@@ -257,6 +272,49 @@
    },
    "source": [
     "## q2_memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "208a3e5f-ecc6-4612-a177-acb184ba0f08",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from src.q2_memory import q2_memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d32fe1e3-5f70-41f9-b763-88b75de1ffcd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result = q2_memory(dbfs_file_path)\n",
+    "result"
    ]
   },
   {
