Implementation of q3_time
- first read row by row
- then use Polars data frame for efficient data wrangling

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -468,7 +468,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5a2d1792-36f3-40af-8764-ec913ccf2ad4",
      "showTitle": false,
@@ -479,6 +482,28 @@
    "outputs": [],
    "source": [
     "from src.q3_time import q3_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4da6c3bb-7c20-4088-a454-b634fd3f1b3a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result = q3_time(dbfs_file_path)\n",
+    "result"
    ]
   }
  ],
