--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -16,7 +16,84 @@
     }
    },
    "source": [
-    "# Setup"
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "367f44c2-5897-4d1d-80d2-72bb817f2c55",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2960cf72-3ad0-49f9-832c-e19e443dcf0b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "I decided to solve this challenge using the Azure cloud, more specifially using an Azure Blob storage for the JSON file, using an Azure Key Vault to store any type of secrets, and finally using Azure Databricks as my data engineering platform of choice, thanks to its great capabilities. \n",
+    "As I am aware, that LATAM Airlines operates on GCP, I would change my storage solution to Google Cloud Storage and my Key Vault solution to Google Secret Manager. As Databricks is a multi-cloud platform that operates on Azure, AWS, and GCP, we can keep that service. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a2efca41-f825-442d-9004-e3481aa9dd71",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dc5c88ac-e769-4c2e-9d3d-61c6d3cdf41e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "First I created some variables, that I will be using later."
    ]
   },
   {
@@ -42,6 +119,25 @@
     "mount_point = \"/mnt/data\"\n",
     "file_path = \"farmers-protest-tweets-2021-2-4.json\"\n",
     "dbfs_file_path = f\"/dbfs{mount_point}/{file_path}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "590f46ac-2a85-4ddd-90dd-87ae7690e1f8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Then I could proceed and mount the Azure Blob Storage container into the Databricks environment, so I can access the JSON file directly from Databricks."
    ]
   },
   {
@@ -72,6 +168,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "874d8413-7b59-4d81-bc50-632a9d9a2908",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Next, I install all relevant libraries on the cluster and choose to hide the output."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -89,7 +204,6 @@
    },
    "outputs": [],
    "source": [
-    "# Install all relevant libraries with minimal output\n",
     "%pip install -q memory_profiler py-spy emoji polars"
    ]
   },
@@ -132,6 +246,25 @@
    },
    "source": [
     "# Challenge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2cb80298-afd5-424e-96e5-6a06fca637c0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Generally speaking, in this challenge, I chose Polars over PySpark and Pandas dataframes due to its superior performance and efficiency in handling large data sets. While Pandas is a popular choice for data manipulation, it is significantly slower and more memory-intensive, especially for large JSON files, making it the least suitable option here. PySpark is powerful for distributed data processing, but in this case, its initialization and processing overheads resulted in slower performance compared to Polars. Additionally, for memory-optimized functions, I opted to read the JSON file row by row to avoid loading the entire file into memory, which allows for more efficient memory usage. Polars’ lightweight, efficient DataFrame operations, combined with this row-by-row approach, enabled me to achieve both speed and memory efficiency."
    ]
   },
   {
@@ -504,6 +637,109 @@
    "source": [
     "result = q3_time(dbfs_file_path)\n",
     "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "592e1402-0333-41f2-a34c-c18029722c8a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Metrics Monitoring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "97b0d7e9-6ec5-4712-ac65-6b2dd78450c1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from memory_profiler import profile, memory_usage\n",
+    "import polars as pl\n",
+    "\n",
+    "\n",
+    "# List of functions to profile\n",
+    "functions_to_profile = [\n",
+    "    q1_memory, q1_time, \n",
+    "    q2_memory, q2_time, \n",
+    "    q3_memory, q3_time\n",
+    "]\n",
+    "\n",
+    "# Helper function to measure memory usage only\n",
+    "def measure_memory(func, *args, **kwargs):\n",
+    "    # Decorate the function with @profile in memory-only mode\n",
+    "    profiled_func = profile(func)\n",
+    "    mem_usage = memory_usage((profiled_func, args, kwargs), interval=0.1, retval=False)\n",
+    "    avg_memory = sum(mem_usage) / len(mem_usage)\n",
+    "    return avg_memory\n",
+    "\n",
+    "# Helper function to measure execution time only\n",
+    "def measure_time(func, *args, **kwargs):\n",
+    "    start_time = time.time()\n",
+    "    func(*args, **kwargs)  # Run function without profiling\n",
+    "    end_time = time.time()\n",
+    "    execution_time = end_time - start_time\n",
+    "    return execution_time\n",
+    "\n",
+    "# Initialize list to store results\n",
+    "metrics_list = []\n",
+    "\n",
+    "# Run profiling for each function and store the results in the list\n",
+    "for func in functions_to_profile:\n",
+    "    avg_memory = measure_memory(func, dbfs_file_path)  # Measure memory usage\n",
+    "    execution_time = measure_time(func, dbfs_file_path)  # Measure execution time without profiling\n",
+    "    metrics_list.append({\n",
+    "        \"Function Name\": func.__name__,\n",
+    "        \"Average Memory Usage (MiB)\": round(avg_memory, 2),\n",
+    "        \"Execution Time (seconds)\": round(execution_time, 2)\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "884c019d-b81f-4bf8-a005-0bc15378e916",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Convert the list of metrics to a Polars DataFrame\n",
+    "metrics_df = pl.DataFrame(metrics_list)\n",
+    "\n",
+    "print(metrics_df)"
    ]
   }
  ],
