--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -86,6 +86,94 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "874d8413-7b59-4d81-bc50-632a9d9a2908",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "First, I install all relevant libraries on the cluster and choose to hide the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "adc9a26f-37fe-427f-9182-d26fe0c795ef",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%pip install -q memory_profiler py-spy emoji polars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1f416648-9cb8-4d8a-ae07-86398a0bdbc0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Then I import all libraries, that I need to run this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5361353a-fc6a-4849-8faf-1ce7ace75f19",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from src.q1_memory import q1_memory\n",
+    "from src.q1_time import q1_time\n",
+    "from src.q2_memory import q2_memory\n",
+    "from src.q2_time import q2_time\n",
+    "from src.q3_memory import q3_memory\n",
+    "from src.q3_time import q3_time\n",
+    "from memory_profiler import profile, memory_usage\n",
+    "import polars as pl\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "dc5c88ac-e769-4c2e-9d3d-61c6d3cdf41e",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -93,7 +181,7 @@
     }
    },
    "source": [
-    "First I created some variables, that I will be using later."
+    "Then I created some variables, that I will be using later."
    ]
   },
   {
@@ -137,7 +225,7 @@
     }
    },
    "source": [
-    "Then I could proceed and mount the Azure Blob Storage container into the Databricks environment, so I can access the JSON file directly from Databricks."
+    "Now I could proceed and mount the Azure Blob Storage container into the Databricks environment, so I can access the JSON file directly from Databricks."
    ]
   },
   {
@@ -165,68 +253,6 @@
     "        mount_point = mount_point,\n",
     "        extra_configs  = {f\"fs.azure.account.key.{storage_account_name}.blob.core.windows.net\" : dbutils.secrets.get(scope=\"kv-scope\", key=\"access-key\")}\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "874d8413-7b59-4d81-bc50-632a9d9a2908",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Next, I install all relevant libraries on the cluster and choose to hide the output."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "adc9a26f-37fe-427f-9182-d26fe0c795ef",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%pip install -q memory_profiler py-spy emoji polars"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5361353a-fc6a-4849-8faf-1ce7ace75f19",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from memory_profiler import profile\n",
-    "import importlib"
    ]
   },
   {
@@ -296,27 +322,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8f4b0ce1-d3b8-4293-a4ea-d163707f5730",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from src.q1_memory import q1_memory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "5b0729d4-b544-4ec4-b02a-3dfdb624bbe2",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -346,27 +351,6 @@
    },
    "source": [
     "## q1_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "cd53e887-6f94-4584-8bcd-ce5825d00f94",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from src.q1_time import q1_time"
    ]
   },
   {
@@ -420,27 +404,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "208a3e5f-ecc6-4612-a177-acb184ba0f08",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from src.q2_memory import q2_memory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "d32fe1e3-5f70-41f9-b763-88b75de1ffcd",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -470,27 +433,6 @@
    },
    "source": [
     "## q2_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "8cd2320d-53a4-40a4-bdc5-dcd2ff82a8e2",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from src.q2_time import q2_time"
    ]
   },
   {
@@ -544,27 +486,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "625229da-b0fe-4bf1-8ce2-2771ec1255e4",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from src.q3_memory import q3_memory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "15f7028c-7e1c-4e92-bb30-f428bb0f60c4",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -594,27 +515,6 @@
    },
    "source": [
     "## q3_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5a2d1792-36f3-40af-8764-ec913ccf2ad4",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from src.q3_time import q3_time"
    ]
   },
   {
@@ -659,6 +559,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fa705179-f3d2-4fde-b903-7759002ff5f2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "I want to create a single DataFrame that displays two metrics—average memory usage and execution time—for each function, presented in a compact format with each function as a row. To achieve this, I first call each function with the @profile decorator to measure memory usage. Then, I call each function a second time without profiling to measure execution time. Separating the calls for memory profiling and timing ensures that the metrics do not interfere with each other, thus avoiding skewed data. I decided to set the interval paremter to 0.5, meaning that every half a second a snapshot for analysis is taken. Previously I had it at 0.1, which resulted in a long execution of about 23 minutes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -676,12 +595,6 @@
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "from memory_profiler import profile, memory_usage\n",
-    "import polars as pl\n",
-    "\n",
-    "\n",
-    "# List of functions to profile\n",
     "functions_to_profile = [\n",
     "    q1_memory, q1_time, \n",
     "    q2_memory, q2_time, \n",
@@ -692,7 +605,7 @@
     "def measure_memory(func, *args, **kwargs):\n",
     "    # Decorate the function with @profile in memory-only mode\n",
     "    profiled_func = profile(func)\n",
-    "    mem_usage = memory_usage((profiled_func, args, kwargs), interval=0.1, retval=False)\n",
+    "    mem_usage = memory_usage((profiled_func, args, kwargs), interval=0.5, retval=False)\n",
     "    avg_memory = sum(mem_usage) / len(mem_usage)\n",
     "    return avg_memory\n",
     "\n",
@@ -736,9 +649,7 @@
    },
    "outputs": [],
    "source": [
-    "# Convert the list of metrics to a Polars DataFrame\n",
     "metrics_df = pl.DataFrame(metrics_list)\n",
-    "\n",
     "print(metrics_df)"
    ]
   }
